--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+yoctolib-cpp (1.10.33636-5) unstable; urgency=medium
+
+  * Add README upstream in package
+
+ -- Gabriel Roch <gabriel@g-roch.ch>  Thu, 13 Dec 2018 12:01:39 +0100
+
 yoctolib-cpp (1.10.33636-4) unstable; urgency=medium
 
   * Add missing depends for -dev package
