--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+yoctolib-cpp (1.10.33736-1) unstable; urgency=medium
+
+  * Update from upstream
+
+ -- Gabriel Roch <gabriel@g-roch.ch>  Wed, 19 Dec 2018 08:52:49 +0100
+
 yoctolib-cpp (1.10.33636-6) unstable; urgency=medium
 
   * Fix-Build depends: set to binariy version for *-dev package
