--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-yoctolib-cpp (1.10.33831-1) UNRELEASED; urgency=medium
+yoctolib-cpp (1.10.33831-1) unstable; urgency=medium
 
   * Update from upstream
 
