--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+yoctolib-cpp (1.10.34022-2) unstable; urgency=medium
+
+  * Update depends for libyapi-dev
+
+ -- Gabriel Roch <gabriel@g-roch.ch>  Sat, 19 Jan 2019 11:27:25 +0100
+
 yoctolib-cpp (1.10.34022-1) unstable; urgency=medium
 
   * Update from upstream
