--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+yoctolib-cpp (1.10.34022-3) unstable; urgency=medium
+
+  * Update makefile in Examples
+  * Extract symlink from debian/rule to debian/*.links
+  * Add excluded section in debian/copyright (upstream binary compiled)
+
+ -- Gabriel Roch <gabriel@g-roch.ch>  Sat, 19 Jan 2019 18:52:10 +0100
+
 yoctolib-cpp (1.10.34022-2) unstable; urgency=medium
 
   * Update depends for libyapi-dev
